# snapcal

./: .gitignore  README.md  build.sh  curl.md  local-run.md  local-sam-run.md  local-train.md  models.md  package-lock.json  package.json  pyproject.toml  render.yaml
apps/api/: manage.py  requirements.txt
apps/api/prediction/: remote.py  serializers.py  services.py  urls.py  views.py
apps/api/snapcal_api/: asgi.py  settings.py  urls.py  wsgi.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: snapcal-console.tsx
configs/segmentation/: mobilesam_default.json  mobilesam_fast_local.json
configs/training/: base.json  efficientnet_b0_raw.json  efficientnet_b0_segmented.json  resnet50_raw.json  resnet50_raw_local.json  resnet50_raw_quick_ablation.json  resnet50_segmented.json  resnet50_segmented_local.json  resnet50_segmented_quick_ablation.json  vit_b16_raw.json  vit_b16_segmented.json
data/reference/: README.md  food101_usda_mapping.csv
deploy/: README.md  modal_inference.py
deploy/lightsail/: mobilesam.runtime.json.example  nginx.snapcal.conf.example  snapcal.service.example
ml/: README.md  requirements.txt
ml/scripts/: benchmark_latency.py  build_manifest.py  evaluate.py  export_inference_bundle.py  fetch_mobilesam_checkpoint.py  run_segmentation.py  sample_manifest.py  smoke_test.py  train.py
notebooks/: colab_train.ipynb  colab_train_local.ipynb
report/: main.tex  notes.md  references.bib
report/figures/: pipeline.mmd
scripts/: fetch_model_bundle.py
src/snapcal/: __init__.py  config.py  constants.py  datasets.py  evaluation.py  inference.py  manifests.py  models.py  nutrition.py  schemas.py  segmentation.py  torch_utils.py  training.py
tests/: test_config.py  test_constants.py  test_evaluation.py  test_manifests.py  test_nutrition.py  test_portions.py  test_schemas.py
